# adk_evolutionary_landscape

./: .gitignore  LICENSE  README.md  adk_env.yml  adk_pnpt_env.yml  pyproject.toml
figures/: fig1.ipynb  fig2.ipynb  fig3.ipynb  fig4.ipynb  fig5.ipynb  fig6.ipynb  fig7.ipynb  fig8.ipynb
notebooks/: augmented_potts_regression.ipynb  bootstrap_supervised_ml.ipynb  couplings_analysis.ipynb  dimensionality_reduction_and_embedding_analysis.ipynb  ml_titration_and_pnpt_visualization.ipynb  temperature_correlation_analysis.ipynb
scripts/: run_adk_bootstrapped_ml_titration.py
scripts/plmc/: run_plmc_adk.sh  run_plmc_adk_big_fasta.sh
scripts/proteinnpt_clr/: 20240717_bootstrap_stratified_split.json  Step1_data_processing.sh  Step2_compute_zero_shot_predictions.sh  Step3a_get_embeddings_Tranception.sh  Step3b_get_embeddings_ESM2.sh  Step3c_get_embeddings_MSAT.sh  Step4a_train_PNPT_Tranception.sh  Step4b_train_CLR_Tranception.sh  Step4c_train_PNPT_ESM2.sh  Step4d_train_CLR_ESM2.sh  Step4e_train_PNPT_MSAT.sh  adk_config.sh  adk_reference_file.csv  adk_setup.sh
scripts/proteinnpt_clr/model_configs/: CLR_ESM2_650M.json  PNPT_Tranception.json
scripts/proteinnpt_clr/target_configs/: kinase_single_log10-km.json
src/: plotting.py  utils.py
src/adk_evolutionary_landscape.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/proteinnpt_clr/: data_processing.py
src/proteinnpt_clr/model_configs/: CLR_MSAT.json  CLR_Tranception.json  PNPT_ESM2_650M.json  PNPT_MSAT.json
supplemental/: run_plmc_adk.sh  run_plmc_adk_big_fasta.sh
(+4 files in other folders)
