[project]
name = "adk-evolutionary-landscape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "biopython>=1.85",
    "evcouplings>=0.2.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numba==0.58.1",
    "numpy>=1.23,<2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.3.0,<1.4",
    "scipy==1.9.0",
    "seaborn>=0.13.2",
    "umap-learn==0.5.5",
]
